# project-template

./: .gitignore  README.md  demo.ipynb  pyproject.toml  script.py
